# Reqlify

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: pr-build.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: http.rs  main.rs
src/components/layout/: ActivityRail.tsx  SidePane.tsx  Workbench.tsx
src/components/ui/: Button.tsx  IconButton.tsx  Input.tsx  Section.tsx  Select.tsx
src/constants/: http.ts  storage.ts
src/features/about/: AboutPanel.tsx
src/features/collections/: CollectionsPanel.tsx  SaveToCollectionModal.tsx
src/features/env/: EnvPanel.tsx
src/features/history/: HistoryPanel.tsx
src/features/request/: AuthEditor.tsx  BodyEditor.tsx  CurlImportModal.tsx  KeyValueEditor.tsx  MethodPicker.tsx  RequestPanel.tsx  UrlBar.tsx  useSendRequest.ts
src/features/response/: ResponseBody.tsx  ResponseHeaders.tsx  ResponsePanel.tsx  StatTiles.tsx
src/features/tabs/: TabStrip.tsx
src/lib/: curlExporter.ts  curlParser.ts  httpClient.ts  storage.ts
src/store/: collectionsStore.ts  envStore.ts  historyStore.ts  tabsStore.ts
src/styles/: globals.css
src/types/: collection.ts  env.ts  history.ts  http.ts  tabs.ts
src/utils/: format.ts  id.ts  request.ts  status.ts
