[package]
name = "reqlify"
version = "0.2.0"
description = "A free, offline-first HTTP client"
authors = ["sosadly"]
edition = "2021"

[lib]
name = "reqlify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
